atualizando informações sobre meses

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <label for="timeOption">Selecione a Duração:</label>
       <select id="timeOption" onchange="updateDurationSlider()">
         <option value="days">Dias</option>
-        <option value="months">Meses(EM ANDAMENTO!)</option>
+        <option value="months">Meses</option>
       </select>
 
       <label for="projectDuration">Duração do Projeto em Dias: <span class="projectDurationValue" id="projectDurationValue">5 dias</span> </label>
